<resources>
    <string name="app_name">Messenger</string>
    <string name="ivan_ivanov_gmail_com">Ivan.Ivanov@gmail.com</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="sign_up">Sign up</string>
    <string name="set_new_password">Set new password</string>
    <string name="send_me_reset_password_instructions">Send me reset password instructions</string>
    <string name="your_name">your name</string>
    <string name="your_last_name">your last name</string>
    <string name="your_age">your age</string>
    <string name="registration">Registration</string>
    <string name="sign_out">Sign out</string>
    <string name="type_your_message">Type your message:</string>
</resources>