<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="30dp"
    android:layout_marginTop="170dp"
    android:layout_marginEnd="30dp"
    app:cardBackgroundColor="#333333"
    app:cardCornerRadius="15dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/welcome"
            android:textColor="#ABABAB"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:src="@drawable/email_icon"
            app:layout_constraintBottom_toBottomOf="@+id/EditTextEmail"
            app:layout_constraintEnd_toStartOf="@id/EditTextEmail"
            app:layout_constraintTop_toTopOf="@+id/EditTextEmail" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:src="@drawable/password_icon"
            app:layout_constraintBottom_toBottomOf="@+id/EditTextPassword"
            app:layout_constraintEnd_toStartOf="@+id/EditTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/EditTextEmail" />

        <EditText
            android:id="@+id/EditTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:autofillHints="emailAddress"
            android:backgroundTint="@color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="#ABABAB"
            app:layout_constraintBottom_toTopOf="@id/EditTextPassword" />

        <EditText
            android:id="@+id/EditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:autofillHints="password"
            android:backgroundTint="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="#ABABAB"
            app:layout_constraintTop_toBottomOf="@id/EditTextEmail" />

        <Button
            android:id="@+id/ButtonSendLogInData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/log_in"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/EditTextPassword" />

        <TextView
            android:id="@+id/TextViewForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="3dp"
            android:text="@string/forgot_password"
            android:textColor="#ABABAB"
            app:layout_constraintStart_toStartOf="@+id/ButtonSendLogInData"
            app:layout_constraintTop_toBottomOf="@+id/ButtonSendLogInData" />

        <TextView
            android:id="@+id/TextViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="3dp"
            android:text="@string/sign_up"
            android:textColor="#ABABAB"
            app:layout_constraintEnd_toEndOf="@+id/ButtonSendLogInData"
            app:layout_constraintTop_toBottomOf="@+id/ButtonSendLogInData" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>